--- a/less/control.less
+++ b/less/control.less
@@ -45,8 +45,6 @@
 
 .Select-control {
 	background-color: @select-input-bg;
-	border-color: lighten(@select-input-border-color, 5%) @select-input-border-color darken(@select-input-border-color, 10%);
-	border-radius: @select-input-border-radius;
 	color: @select-text-color;
 	cursor: default;
 	display: table;
@@ -56,7 +54,7 @@
 	position: relative;
 	width: 100%;
   	border:0;
-	border-buttom:'1ps solid #ddd';
+	border-buttom:'1px solid #ddd';
 	&:hover {
 		box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
 	}
