--- a/less/control.less
+++ b/less/control.less
@@ -54,7 +54,7 @@
 	position: relative;
 	width: 100%;
   	border:0;
-	border-buttom:'1px solid #ddd';
+	border-bottom:1px solid #ddd;
 	&:hover {
 		box-shadow: 0 1px 0 rgba(0, 0, 0, 0.06);
 	}
