--- a/less/control.less
+++ b/less/control.less
@@ -19,7 +19,7 @@
 
 .Select {
 	position: relative;
-
+    margin-bottom:@select-margin-bottom;
 	// handle disabled state
 	&.is-disabled > .Select-control {
 		background-color: @select-input-bg-disabled;
